--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "console-table-printer": "^2.11.2",
     "inquirer": "^8.2.4"
   }
 }
